--- a/assets/style.css
+++ b/assets/style.css
@@ -33,7 +33,17 @@ h2 {
     border-bottom: var(--secondaryfont) solid 1px;
     padding-bottom: 20px;
     margin-bottom: 10px;
-    margin-right: 10px;
+    margin-right: 10px;   
+}
+
+#search-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.search-input {
+    border-radius: 5px;
 }
 
 .search-btn {
@@ -49,7 +59,7 @@ h2 {
 
 .search-btn:active {
     transform: translate(0, 0);
-  box-shadow: 2px 2px grey;
+    box-shadow: 2px 2px grey;
 }
 
 .past-search-heading {
@@ -60,4 +70,15 @@ h2 {
     border: 1px solid var(--secondaryfont);
     border-radius: 5px;
     width: 60%;
+}
+
+#footer-section {
+    margin-top: 40px;
+    background-color: var(--banner);
+    color: var(--mainfont);
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
