--- a/assets/style.css
+++ b/assets/style.css
@@ -82,4 +82,5 @@ h2 {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    background: linear-gradient(175deg, var(--mainfont), var(--banner) 40%);
 }
